--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "systemjs-debugger",
-  "version": "0.0.1",
-  "description": "SystemJS debugger",
+  "version": "0.0.6",
+  "description": "Debugger for SystemJS (JSPM) configurations",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
